cmake_minimum_required(VERSION 3.21)
project(ACM)

set(CMAKE_CXX_STANDARD 14)

add_executable(test02 Test/test02.cpp)
add_executable(oj1782 ZIMEOJ/oj1782.cpp)
add_executable(aw0099 AcWing/aw0099.cpp)
add_executable(test01 Test/test01.cpp)
add_executable(aw1097 AcWing/aw1097.cpp)
add_executable(poj1163 Poj/poj1163.cpp)
add_executable(aw1098 AcWing/aw1098.cpp)
add_executable(aw1106 AcWing/aw1106.cpp)
add_executable(aw1015 AcWing/aw1015.cpp)
add_executable(aw1018 AcWing/aw1018.cpp)
add_executable(aw1292 AcWing/aw1292.cpp)
add_executable(aw1017 AcWing/aw1017.cpp)
add_executable(aw0895 AcWing/aw0895.cpp)
add_executable(aw0802 AcWing/aw0802.cpp)
add_executable(Main Main.cpp)
add_executable(test03 Test/test03.cpp)
add_executable(aw1076 AcWing/aw1076.cpp)
add_executable(aw1014 AcWing/aw1014.cpp)
add_executable(p4913 Luogu/p4913.cpp)
add_executable(p1305 Luogu/p1305.cpp)
add_executable(aw1289 AcWing/aw1289.cpp)
add_executable(aw1290 AcWing/aw1290.cpp)
add_executable(aw1293 AcWing/aw1293.cpp)
add_executable(aw0196 AcWing/aw0196.cpp)
add_executable(aw0154 AcWing/aw0154.cpp)
add_executable(aw0188 AcWing/aw0188.cpp)
add_executable(aw1100 AcWing/aw1100.cpp)
add_executable(p1144 Luogu/p1144.cpp)
add_executable(aw1116 AcWing/aw1116.cpp)
add_executable(aw0423 AcWing/aw0423.cpp)
add_executable(aw1024 AcWing/aw1024.cpp)
add_executable(aw1022 AcWing/aw1022.cpp)
add_executable(aw0241 AcWing/aw0241.cpp)
add_executable(aw0242 AcWing/aw0242.cpp)
add_executable(wa0242 AcWing/aw0242.cpp)
add_executable(aw0243 AcWing/aw0243.cpp)
add_executable(aw0797 AcWing/aw0797.cpp)
add_executable(p1290 AcWing/p1290.cpp)
add_executable(aw1291 AcWing/aw1291.cpp)
add_executable(aw1129 AcWing/aw1129.cpp)
add_executable(aw0905 AcWing/aw0905.cpp)
add_executable(aw0906 AcWing/aw0906.cpp)
add_executable(aw0907 AcWing/aw0907.cpp)
add_executable(aw0148 AcWing/aw0148.cpp)
add_executable(aw0913 AcWing/aw0913.cpp)
add_executable(aw0104 AcWing/aw0104.cpp)
add_executable(aw0125 AcWing/aw0125.cpp)